# bittorrent

./: .gitignore  CMakeLists.txt  README  TODO
src/: includes.h  main.c  struct.h
src/connect/: connect.c  connect.h
src/encode/: check.c  decode.c  decode.h  encode.c  encode.h
